--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
   <link rel="stylesheet" href="./assets/css/style.css" />
@@ -157,6 +158,7 @@
     <div class="flex-row">
     <h2 class="section-title primary-border">Meet The Trainers</h2>
     </div>
+    
   <div class="trainers">
     <article class="trainer">
       <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
